[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://src/scripts/ui/UIManager.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -20.0
text = "Score: 0"
theme_override_font_sizes/font_size = 24

[node name="GameOverPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
theme_override_styles/panel = SubResource("1")

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = 10.0
text = "Final Score: 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 20.0
offset_right = 75.0
offset_bottom = 60.0
text = "Restart"
